# instead-launcher-android

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  PrivacyPolicy.md  README.md  build.gradle  gradle.properties  settings.gradle
.github/: FUNDING.yml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/kotlin/org/emunix/insteadlauncher/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/Instead/: CMakeLists.txt  README  instead_launcher.c
app/src/main/cpp/Lua/: CMakeLists.txt  README
app/src/main/cpp/SDL2/: CMakeLists.txt  README
app/src/main/cpp/SDL2_image/: CMakeLists.txt  README
app/src/main/cpp/SDL2_mixer/: README
app/src/main/cpp/SDL2_ttf/: CMakeLists.txt  README
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/kotlin/org/emunix/insteadlauncher/: InsteadLauncher.kt
app/src/main/kotlin/org/emunix/insteadlauncher/data/: Game.kt  GameDao.kt  GameDatabase.kt  GameDiffCallback.kt  GameStateConverter.kt
app/src/main/kotlin/org/emunix/insteadlauncher/di/: AppComponent.kt  AppModule.kt  DatabaseModule.kt  GameUtilsModule.kt  InteractorModule.kt  ManagerModule.kt  NetworkModule.kt  PreferenceModule.kt  RepositoryModule.kt  (+2 more)
app/src/main/res/anim/: slide_out_left.xml  slide_out_right.xml
app/src/main/res/drawable/: ic_account_circle_red_24dp.xml  ic_alert_white_24dp.xml  ic_cursor_grey_24dp.xml  ic_file_compare_blue_24dp.xml  ic_format_size_24dp.xml  ic_headphones_grey_24dp.xml  ic_image_album_grey_24dp.xml  ic_image_broken_24dp.xml  ic_image_grey_24dp.xml  ic_keyboard_backspace_grey_24dp.xml  ic_keyboard_outline_24dp.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_math_compass_24dp.xml  ic_new_red_16dp.xml  ic_refresh_black_24dp.xml  ic_resize_24dp.xml  ic_sandbox_24dp.xml  ic_sync_24dp.xml  ic_theme_light_dark_24dp.xml  ic_web_grey_24dp.xml
app/src/main/res/drawable-night/: ic_account_circle_24dp.xml  ic_cursor_24dp.xml  ic_file_compare_24dp.xml  ic_format_size_24dp.xml  ic_headphones_24dp.xml  ic_image_24dp.xml  ic_image_album_24dp.xml  ic_image_broken_24dp.xml  ic_keyboard_backspace_24dp.xml  ic_keyboard_outline_24dp.xml  ic_math_compass_24dp.xml  ic_new_red_16dp.xml  ic_resize_24dp.xml  ic_sandbox_24dp.xml  ic_web_24dp.xml
app/src/main/res/font/: neucha.xml
app/src/main/res/layout/: activity_about.xml  activity_game.xml  activity_installed_games.xml  activity_installed_games_list_item.xml  activity_launcher.xml  activity_repository.xml  activity_repository_list_item.xml  activity_settings.xml  fragment_about.xml  fragment_game.xml  fragment_installed_games.xml  fragment_repository.xml  fragment_settings.xml  fragment_unpack_resources.xml  input_layout.xml  item_repository.xml
app/src/main/res/layout-land/: fragment_about.xml  fragment_game.xml
app/src/main/res/menu/: menu_context_installed_games.xml  menu_game.xml  menu_installed_games.xml  menu_repository.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-eo/: string.xml  strings.xml
app/src/main/res/values-night/: colors.xml  dimens.xml  styles.xml
app/src/main/res/values-night-v27/: styles.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sw600dp/: dimens.xml
app/src/main/res/values-sw800dp/: dimens.xml
app/src/main/res/values-v23/: styles.xml
app/src/main/res/values-v27/: styles.xml
app/src/main/res/values-v29/: arrays.xml
app/src/main/res/values-w820dp/: dimens.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/org/emunix/insteadlauncher/: ExampleUnitTest.java
app/src/test/resources/testgame/: main3.lua
core-preferences/: build.gradle
core-preferences/src/main/: AndroidManifest.xml
core-storage/: build.gradle
core-storage/src/main/: AndroidManifest.xml
fastlane/metadata/android/en/: full_description.txt  short_description.txt  software_url.txt
fastlane/metadata/android/en-US/: full_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 701.txt  800.txt  801.txt  802.txt  803.txt  804.txt  80500.txt  80600.txt  90000.txt  90100.txt  90200.txt
fastlane/metadata/android/en/changelogs/: 700.txt
fastlane/metadata/android/ru/: short_description.txt
fastlane/metadata/android/ru-RU/: full_description.txt
fastlane/metadata/android/ru-RU/changelogs/: 701.txt  800.txt  801.txt  802.txt  803.txt  804.txt  805.txt  80600.txt  90000.txt  90100.txt  90200.txt
fastlane/metadata/android/ru/changelogs/: 700.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
images/: featureGraphic.xcf
instead/: .gitignore  build.gradle  consumer-rules.pro
instead/src/main/: AndroidManifest.xml
instead/src/main/c/: CMakeLists.txt
instead/src/main/c/Instead/: CMakeLists.txt  README  instead_launcher.c
instead/src/main/c/Lua/: README
instead/src/main/c/SDL2/: README
instead/src/main/c/SDL2_image/: CMakeLists.txt  README
instead/src/main/c/SDL2_mixer/: CMakeLists.txt  README
instead/src/main/c/SDL2_ttf/: CMakeLists.txt  README
instead/src/main/c/libiconv/: CMakeLists.txt  README  dist.info
instead/src/main/c/libiconv/cmake/: dist.cmake
instead/src/main/java/org/libsdl/app/: HIDDeviceBLESteamController.java  SDLActivity.java
instead/src/main/kotlin/org/emunix/instead/: InsteadApiImpl.kt
instead/src/main/kotlin/org/emunix/instead_api/: InsteadApi.kt  InsteadDependencesHolder.kt
instead/src/main/res/drawable/: ic_keyboard_outline_bluegrey_24dp.xml
instead/src/main/res/values/: strings.xml
module-injector/: build.gradle
module-injector/src/main/: AndroidManifest.xml
scancode-generator/: build.gradle
scancode-generator/src/main/: AndroidManifest.xml
sdl-activity/: build.gradle
sdl-activity/src/main/: AndroidManifest.xml
sdl-activity/src/main/java/org/libsdl/app/: HIDDevice.java  HIDDeviceBLESteamController.java  HIDDeviceManager.java  HIDDeviceUSB.java  SDL.java  SDLActivity.java  SDLAudioManager.java  SDLControllerManager.java
(+199 files in other folders)
